# atma

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: tests.yml
src/: db.rs  lib.rs  main.rs
src/addr/: addr.rs  align.rs  endian.rs  mod.rs  offset.rs  range.rs  size.rs
src/asm/: arch.rs  builtins.rs  error.rs  expr.rs  macros.rs  mod.rs
src/bus/: addr.rs  dmg.rs  label.rs  lorom.rs  mbc5.rs  mmc3.rs  mod.rs  nes.rs  nsf.rs  null.rs  ram.rs  rom.rs  snes.rs  ssmp.rs
src/db/: ads.rs  binop.rs  breakpoint.rs  env.rs  error.rs  expr.rs  inst.rs  load.rs  mod.rs  prog.rs  value.rs
src/db/bus/: mod.rs  ram.rs
src/db/proc/: mod.rs  mos6502.rs  sm83.rs
src/dis/: mod.rs  mos6502.rs  sm83.rs  spc700.rs  superfx.rs  w65c816.rs  wdc65c816.rs
src/error/: cache.rs  errs.rs  mod.rs  span.rs
src/expr/: binop.rs  check.rs  env.rs  error.rs  func.rs  label.rs  mod.rs  unop.rs  value.rs
src/link/: arrange.rs  arranged.rs  binary.rs  config.rs  error.rs  eval.rs  expr.rs  fragment.rs  loose.rs  mod.rs  patch.rs  place.rs  positioned.rs  types.rs
src/link/config/: build.rs  checksum.rs  env.rs  error.rs  mod.rs
src/parse/: ads.rs  asm.rs  atom.rs  error.rs  expr.rs  lex.rs  link.rs  lvalue.rs  mod.rs  stream.rs  types.rs
src/proc/: mod.rs  mos6502.rs  nop.rs  sm83.rs  spc700.rs  util.rs  w65c816.rs
tests/: asm_errors.rs  asm_mos6502.rs  asm_spc700.rs  asm_superfx.rs  asm_w65c816.rs  config_errors.rs  mos6502.rs
