[package]
name = "atma"
version = "0.1.0"
authors = ["Matthew D. Steele <mdsteele@alum.mit.edu>"]
description = "Assembler Toolchain for Multiple (retro) Architectures"
keywords = ["assembly"]
license = "MIT"
edition = "2024"

[dependencies]
ariadne = "0.6.0"
bimap = "0.6.3"
byteorder = "1"
chumsky = { version = "0.11.2", features = ["pratt"] }
clap = { version = "4.5", features = ["derive"] }
logos = "0.16"
num-bigint = "0.4.6"
num-traits = "0.2.19"
rangemap = "1.7.0"
